<resources>
    <string name="app_name">CogNet</string>
    <string name="action_settings">Settings</string>
    <string name="books">Books</string>
    <string name="journals">Journals</string>
    <string name="ref_books">Reference Books</string>
    <string name="topics">Topics</string>
    <string name="about_us">About Us</string>
    <string name="about_us_txt">Authoritative and unrivaled, MIT CogNet is the essential research tool for scholars in the Brain and Cognitive Sciences, with new content added every month.</string>
    <string name="login">Login</string>
    <string name="login_to_cognet">Login to MIT CogNet</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_login">Login</string>
    <string name="cognetRestURL">http://cognet-staging2.mit.edu/rest</string>
    <string name="login_error_msg">Please verify your username and password</string>
    <string name="ok">OK</string>
    <string name="cognet_logo">MIT CogNet</string>
    <string name="title_activity_books_list">BooksListActivity</string>
    <string name="loading">Loading&#8230;</string>
    <string name="title_activity_journals_list">JournalsListActivity</string>
    <string name="title_activity_items_list">ItemsListActivity</string>
    <string name="title_activity_book_description">BookDescriptionActivity</string>
    <string name="title_activity_refworks_list">RefworksListActivity</string>
    <string name="title_activity_pdfviewer">PDFViewer</string>

</resources>
