<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.cognet.login.Login">

    <TextView
        android:id="@+id/text_cognet_logo"
        android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cognet_logo"
        android:textSize="60px"
        android:textAlignment="center"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/login_to_cognet"
        android:layout_below="@+id/text_cognet_logo"
        android:layout_marginTop="16dp"
    />

    <EditText
        android:id="@+id/edit_text_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_login"
        android:layout_marginTop="16dp"
        android:hint="@string/username"
        />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_username"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        />

    <Button
        android:id="@+id/btn_login_activity_login"
        android:background="@color/darkblue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"
        android:layout_below="@+id/edit_text_password"
        />

</RelativeLayout>
